# strategy-discovery

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
deploy/: install.sh  logrotate-strategy-discovery  run-autodiscover.sh  strategy-discovery.service  strategy-discovery.timer
docs/: backlog.md  coding-conventions.md  data-provider-notes.md  phase3-closure.md
scripts/: autodiscover.py  backtest.py  canonical_eval_spec.py  diagnose_disconnect.py  discover.py  evaluate.py  fetch_data.py  leaderboard.py  reeval_basket.py  verify_data.py
src/data/: __init__.py  alpaca.py  base.py  cache.py  kraken.py  kraken_csv.py  polygon.py  resample.py
src/engine/: __init__.py  backtester.py  execution.py  metrics.py  portfolio.py  session.py
src/evaluation/: __init__.py  baskets.py  diagnostics.py  fast_pipeline.py  leaderboard_hook.py  pipeline.py  scoring.py  significance.py  splits.py  symbols.py  walkforward.py
src/generator/: archetypes.py  claude_client.py  dedup.py  fixture.py  indicators.py  pipeline.py  spec.py  spec_recovery.py  spend_tracker.py  translator.py
src/leaderboard/: adapters.py  backfill.py  db.py  models.py  query.py  reconcile.py  record.py
src/strategy/: __init__.py  base.py  context.py  parameters.py
strategies/manual/: buy_and_hold.py  casper.py  hood_rsi8_mr.py  rsi2_mean_reversion.py
tests/: conftest.py
tests/integration/: test_phase4_e2e.py
tests/regression/: test_casper.py  test_phase2_casper.py
tests/unit/: test_backtester_timeframe.py  test_casper.py  test_dedup_and_spend.py  test_diagnostics.py  test_engine_math.py  test_eval_scoring.py  test_eval_significance.py  test_eval_splits.py  test_eval_symbols.py  test_eval_walkforward.py  test_evaluation_leaderboard_hook.py  test_execution.py  test_fast_trade_floor.py  test_holdout_eval.py  test_indicator_kwarg_contract.py  test_indicators.py  test_kraken_csv.py  test_leaderboard_adapters.py  test_leaderboard_backfill.py  test_leaderboard_cli.py  test_leaderboard_db.py  test_leaderboard_models.py  test_leaderboard_query.py  test_leaderboard_reconcile.py  test_leaderboard_record.py  test_manual_strategy_leaderboard.py  test_metrics.py  test_pipeline_mocked.py  test_portfolio.py  test_resample.py  test_session.py  test_session_reset_contract.py  test_spec.py  (+4 more)
(+12 files in other folders)
