[project]
name = "strategy-discovery"
version = "0.1.0"
description = "Strategy Discovery Framework — generate, evaluate, and track candidate trading strategies."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "pyarrow>=15",
    "python-dotenv>=1.0",
    "pytz>=2024.1",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["data*", "engine*", "strategy*", "evaluation*", "generator*", "leaderboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
# Default-deselect the 'integration' marker so plain `pytest` skips tests
# that hit external APIs (Anthropic) or run significant compute. The
# alternative — silent-skip via runtime checks — risks accidentally
# burning API on every test run if the gating logic regresses. Opt in
# explicitly with `pytest -m integration`; run everything with `pytest -m ""`.
addopts = "-ra -m 'not integration'"
markers = [
    "integration: tests that hit external APIs (Anthropic) or run significant compute. Default-deselected; opt in with `pytest -m integration`.",
]

[tool.coverage.run]
source = ["src/engine", "src/strategy"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
